Añadí mi firma.
Por el momento se firmó por HTopete, pronto será cambiado.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 	<b>Bienvenido@ a este repositorio. Aquí colgaré todos mis trabajos públicos.</b>
+	<h2>By HTopete.</h2>
 </body>
 </html>
