--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<b>Bienvenido@ a este repositorio. Aquí colgaré todos mis trabajos públicos.</b>
-	<h2>By HTopete.</h2>
+	<b>By HTopete.</b>
 </body>
 </html>
