--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 <b>Ded</b>
 	<b style="color:red">Bienvenido@ a este repositorio. Aquí colgaré todos mis trabajos públicos.</b>
-	<b>By HTopete.</b>
+	<b>By HTopete...</b>
 </body>
 </html>
